--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ cocos2d-x-4.0alph0 ??
 
     [FIX]           C++: remove deprecated functions that are deprecated in v2.x
     [FIX]           Label: texture size of string has unexpected padding on iOS 7 and upper version
+    [FIX]           MenuItem: crash if `MenuItem::onExit` is called multiple times
 
 cocos2d-x-3.4 Jan.30 2015
     [FIX]           Animate3D: `setSpeed` has not effect if `Animate3D` is used in Sequence
