--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ cocos2d-x-4.0alph0 ??
     [FIX]           Audio: audio can not resume if it is interrupt, and back from background
     [FIX]           C++: remove deprecated functions that are deprecated in v2.x
     [FIX]           C++: compiling error when using CC_USE_CULLING
+    [FIX]           C++: remove WP8 support
     [FIX]           Label: texture size of string has unexpected padding on iOS 7 and upper version
     [FIX]           Label: stroke color of system font is incorrect on iOS
     [FIX]           MenuItem: crash if `MenuItem::onExit` is called multiple times
