--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-cocos2d-x-4.0alph0 ??
+cocos2d-x-4.0alph0 Feb.27 2015
+    [NEW]           C++: merge JSB
+
     [FIX]           Audio: audio can not resume if it is interrupt, and back from background
     [FIX]           C++: remove deprecated functions that are deprecated in v2.x
     [FIX]           C++: compiling error when using CC_USE_CULLING
