--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,7 @@ cocos2d-x-4.0alph0 Feb.27 2015
     [FIX]           C++: remove WP8 support
     [FIX]           C++: remove VS2012 support
     [FIX]           HttpClient: memory leak on iOS
+    [FIX]           HttpClient: if the request data is started by a null character, it does not fill http body
     [FIX]           Label: texture size of string has unexpected padding on iOS 7 and upper version
     [FIX]           Label: stroke color of system font is incorrect on iOS
     [FIX]           MenuItem: crash if `MenuItem::onExit` is called multiple times
