--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,7 @@ cocos2d-x-4.0alph0 Feb.27 2015
     [FIX]           Label: texture size of string has unexpected padding on iOS 7 and upper version
     [FIX]           Label: stroke color of system font is incorrect on iOS
     [FIX]           MenuItem: crash if `MenuItem::onExit` is called multiple times
+    [FIX]           PU particle system crash.
 
 cocos2d-x-3.5 ??
     [FIX]           Audio: audio can not resume if it is interrupt, and back from background
