--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,12 +9,12 @@ cocos2d-x-4.0alph0 Feb.27 2015
     [FIX]           C++: compiling error when using CC_USE_CULLING
     [FIX]           C++: remove WP8 support
     [FIX]           C++: remove VS2012 support
+    [FIX]           C++: add deprecated version
     [FIX]           HttpClient: memory leak on iOS
     [FIX]           HttpClient: if the request data is started by a null character, it does not fill http body
     [FIX]           Label: texture size of string has unexpected padding on iOS 7 and upper version
     [FIX]           Label: stroke color of system font is incorrect on iOS
     [FIX]           MenuItem: crash if `MenuItem::onExit` is called multiple times
-    [FIX]           PU particle system crash.
 
 cocos2d-x-3.5 ??
     [FIX]           Audio: audio can not resume if it is interrupt, and back from background
