--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+cocos2d-x-4.0alpha1 Mar.20 2015
+    [FIX]           Label: shadow color is wrong
 
 cocos2d-x-4.0alph0 Feb.28 2015
     [NEW]           C++: merge JSB
