--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ cocos2d-x-4.0alpha1 Mar.20 2015
     [FIX]           Label: shadow color is wrong
     [FIX]           Label: position is wrong if it is visited by a new camera
     [FIX]           MoveTo: disable `reverse()` because it is meaningless
+    [FIX]           MotionStreak: can not work with MoveTo/MoveBy
 
 cocos2d-x-4.0alph0 Feb.28 2015
     [NEW]           C++: merge JSB
