--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,7 +8,7 @@ cocos2d-x-4.0alpha1 Mar.21 2015
     
     [FIX]           AutoRelasePool: memory leak if adding an element into pool when releasing auto release pool
     [FIX]           EditBox: have a 100 bytes input limit.
-    [FIX]           FileUtils: getWritablePath() will not return corrent setted writable path on Mac & Windows
+    [FIX]           FileUtils: getWritablePath() will not return correct writable path on Mac & Windows
     [FIX]           HttpResponse: reference count error that will cause assert error
     [FIX]           Label: shadow color is wrong
     [FIX]           Label: position is wrong if it is visited by a new camera
