--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,7 +7,7 @@ cocos2d-x-4.0alpha1 Mar.21 2015
     [NEW]           3rd: update freetype to 2.5.5
     
     [FIX]           AutoRelasePool: memory leak if adding an element into pool when releasing auto release pool
-    [FIX]           EditBox: have a 100 bytes input limit.
+    [FIX]           EditBox: have a 100 bytes input limit on windows
     [FIX]           FileUtils: getWritablePath() will not return correct writable path on Mac & Windows
     [FIX]           HttpResponse: reference count error that will cause assert error
     [FIX]           Label: shadow color is wrong
