--- a/AUTHORS
+++ b/AUTHORS
@@ -1103,6 +1103,8 @@ Retired Core Developers:
     RongHong Huang (flyingpaper)
         Author of cocos2d-xna and spent all his time on wp7.
 
+lbfamous:
+forked in 2015-04-26 day
 Cocos2d-x can not grow so fast without the active community.
 Thanks to all developers who report & trace bugs, discuss the engine usage in forum & QQ groups!
 Special thanks to Ricardo Quesada for giving us lots of guidances & suggestions.
