--- a/AUTHORS
+++ b/AUTHORS
@@ -1369,8 +1369,11 @@ Retired Core Developers:
 
     thuydx55
         Fixed a bug of loading pluginx lib when compile Android with --compile-script flag.
-
+    greekman99 
+        Refined PhysicsBody methods + corrected documentation issues
+       
     
+
 
 Cocos2d-x can not grow so fast without the active community.
 Thanks to all developers who report & trace bugs, discuss the engine usage in forum & QQ groups!
